--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,7 +24,7 @@ jobs:
           mkdir build
           cp -r img build/
           touch build/.nojekyll
-          ./node_modules/.bin/reveal-md --preprocessor ../../../includes.js --css custom.css --static build slides.md
+          ./node_modules/.bin/reveal-md --preprocessor ../../../includes.js --css custom.css --static build README.md
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
